--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </article>
       <article class="more__post col-xs-12 col-md-12 col-lg-12">
         <div class="more__content">
-          <h2 class="more__title2">Más Cursos</h2>
+          <h2 class="more__title">Más Cursos</h2>
          <div class="more__info">
           <ul class="more__list">
             <li class="more__item">Analítica Web (3)</li>
